--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,8 @@ article code{color:#65b042;font-family:'Liberation Mono','Consolas','Menlo','Mon
 .social .soundcloud{background-image:url("../images/soundcloud.png")}
 .social .lastfm{background-image:url("../images/lastfm.png")}
 .social .twitter{background-image:url("../images/twitter-2.png")}
-footer.sixteen{height:50px}
+footer{margin:60px 0 0;padding:0 20px;}
+footer .sixteen{height:50px}
 @media only screen and (max-width: 959px){.container aside .content{width:172px}
 .social{position:relative;right:-10px;overflow:hidden;}
 .social li{padding:0}
